# log-filter

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES.md  config.json.template  config.yaml.template  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  kubernetes-deployment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: README.md
docs/: advanced_usage.md  architecture.md  conf.py  configuration.md  contributing.md  deployment.md  error_handling.md  index.md  installation.md  integration_guide.md  migration.md  performance.md  quickstart.md  troubleshooting.md
docs/api/: cli.rst  config.rst  core.rst  domain.rst  index.rst  infrastructure.rst  processing.rst  statistics.rst  utils.rst
docs/examples/: README.md  devops.md  monitoring.md  security.md
docs/reference/: cli_reference.md  config_reference.md
docs/tutorials/: advanced.md  beginner.md  docker.md  intermediate.md  kubernetes.md
output/: README.md
scripts/: setup-docker-windows.ps1
src/log_filter/: __init__.py  cli.py  main.py  py.typed
src/log_filter/config/: __init__.py  models.py
src/log_filter/core/: __init__.py  evaluator.py  exceptions.py  parser.py  tokenizer.py
src/log_filter/domain/: __init__.py  filters.py  models.py
src/log_filter/infrastructure/: __init__.py  file_handler_factory.py  file_scanner.py  file_writer.py
src/log_filter/infrastructure/file_handlers/: __init__.py  base.py  gzip_handler.py  log_handler.py
src/log_filter/processing/: __init__.py  pipeline.py  record_parser.py  worker.py
src/log_filter/statistics/: __init__.py  collector.py  performance.py  reporter.py  summary.py
src/log_filter/utils/: __init__.py  highlighter.py  logging.py  progress.py
test-logs/: README.md
tests/: __init__.py  conftest.py
tests/chaos/: test_error_injection.py
tests/core/: test_evaluator_quote_stripping.py  test_evaluator_word_boundary.py
tests/integration/: test_abbreviated_levels.py  test_cli.py  test_end_to_end.py  test_exact_matching.py  test_file_processing.py  test_observability.py  test_pipeline.py
tests/performance/: test_benchmarks.py
tests/security/: test_security_audit.py
tests/unit/: test_config.py  test_evaluator.py  test_exceptions.py  test_file_handlers.py  test_highlighter.py  test_level_normalization.py  test_main.py  test_parser.py  test_progress.py  test_property_based.py  test_tokenizer.py  test_worker.py
